--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <label for="name">City</label>
           </div>
       </div>
+
       <!-- Select State dropdown -->
       <div class="input-field col m4" id="state">
         <select id="state-option">
@@ -126,6 +127,9 @@
         </select>
         <label>State</label>
       </div>  
+      <div id="loading">
+        Here is some text to say that you have to wait for beer
+      </div>
     </div>  
         <!-- Send button -->
         <button
